https://bugs.webkit.org/show_bug.cgi?id=82083 Too many ScrollAnimators are allocated on pages with frames

Reviewed by Geoffrey Garen.

This patch adds a new getter to ScrollableArea called
getExistingScrollAnimator() unlike scrollAnimator() this new function will
just return null if there is not already a ScrollAnimator. Callers should use
this new function when they have business with ScrollAnimator that does not
need to do anything when there are no scrollbars.
* loader/FrameLoader.cpp:
(WebCore::FrameLoader::transitionToCommitted):
* page/EventHandler.cpp:
(WebCore::EventHandler::handleGestureTapDown):
* page/FrameView.cpp:
(WebCore::FrameView::setAnimatorsAreActive):
* platform/ScrollView.cpp:
(WebCore::ScrollView::updateScrollbars):
* platform/ScrollableArea.cpp:
(WebCore::ScrollableArea::willStartLiveResize):
(WebCore::ScrollableArea::willEndLiveResize):
(WebCore::ScrollableArea::contentAreaWillPaint):
(WebCore::ScrollableArea::mouseEnteredContentArea):
(WebCore::ScrollableArea::mouseExitedContentArea):
(WebCore::ScrollableArea::mouseMovedInContentArea):
(WebCore::ScrollableArea::contentAreaDidShow):
(WebCore::ScrollableArea::contentAreaDidHide):
(WebCore::ScrollableArea::willRemoveHorizontalScrollbar):
(WebCore::ScrollableArea::contentsResized):
(WebCore::ScrollableArea::serviceScrollAnimations):
* platform/ScrollableArea.h:
(ScrollableArea):
(WebCore::ScrollableArea::getExistingScrollAnimator):



Canonical link: https://commits.webkit.org/99381@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111896 268f45cc-cd09-0410-ab3c-d52691b4dbfc